feat(search): provide instant search result pages

--- a/assets/styles/layout.styl
+++ b/assets/styles/layout.styl
@@ -490,6 +490,15 @@ img.roomy-and-flexible
     margin-right 4px
     top 1px
 
+.search-by-algolia
+  font-size 60%
+  font-weight normal !important
+  &:hover
+    text-decoration none
+
+  img
+    vertical-align: text-bottom
+
 .hint-block
   background-color #f9f9e5
   padding 1em 0
