--- a/templates/layouts/default.hbs
+++ b/templates/layouts/default.hbs
@@ -107,7 +107,7 @@
         {{#if features.npmo}}
           <input name="q" value="{{q}}" type="search" id="site-search" placeholder="find on-site packages" tabindex="1" autocorrect="off" autocapitalize="off" itemprop="query-input" />
         {{else}}
-          <input name="q" value="{{q}}" type="search" id="site-search" placeholder="find packages" tabindex="1" autocorrect="off" autocapitalize="off" itemprop="query-input" />
+          <input name="q" value="{{q}}" type="search" id="site-search" placeholder="find packages" tabindex="1" autocorrect="off" autocapitalize="off" itemprop="query-input" autocomplete="off" />
         {{/if}}
       </div>
       <input type="submit" id="site-search-submit" />
